--- a/assets/src/scss/5-pages/_guide.scss
+++ b/assets/src/scss/5-pages/_guide.scss
@@ -180,6 +180,7 @@ div.image {
 }
 
 .guide-view {
+  overflow-x: hidden;
   code,
   a {
     word-break: break-word;
